Made mobile pulling easier. Fixed bug with mobile form response not showing.

--- a/server/public/CSS/Items/footer.css
+++ b/server/public/CSS/Items/footer.css
@@ -258,4 +258,8 @@ input:-webkit-autofill:active {
     #pullText {
         width: 115px;
     }
+
+    #formRes {
+        margin-top: 7rem;
+    }
 }
